# bevy_mod_2d_hierarchy

./: Cargo.toml  README.md
examples/: alt_bench.rs  bench.rs  bench_2.rs  bench_mul.rs  minimal.rs  rotation_and_scale.rs  spatial.rs  sprite.rs  sprites.rs  sprites_2.rs  sprites_children.rs  stress.rs  stress_bevy_transform.rs
src/: alt_systems.rs  bundles.rs  lib.rs  systems.rs  transform2.rs  transform_2d.rs
