[package]
name = "bevy_mod_2d_hierarchy"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "games", "2d", "transform", "render"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_mod_2d_hierarchy"
readme = "README.md"
description = "Bevy plugin for more ergonomic 2d."

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["render", "bevy_asset"]

[dev-dependencies]
bevy = "0.9"